# numan-registry

./: .clineignore  .gitignore  AGENTS.md  README.md  SECURITY.md  index.json  index.json.sig
.cursor/: hooks.json
.github/: pull_request_template.md
docs/: incident-response.md  intake-candidates.md  intake-state.json  key-provisioning.md  key-rotation-checklist.md  lifecycle-prove.md  production-cutover-checklist.md  resign-after-highlight-source-backfill.md  upstream-release-outreach.md
keys/: official.pub
registry/: index.json  index.json.sig
schemas/: index-v1.json
scripts/: add-package.py  build-mirror-zip.py  ci-sign.py  lifecycle-prove.py  lint-manifest-index.py  preflight.py  provision-production-key.sh  scan_for_secrets.py  sync-intake-candidates.py  test_build_version_entry_source.py  test_lifecycle_prove.py  test_lint_manifest_index.py  validate.py
specs/: FMotalleb-nu_plugin_desktop_notifications-0.114.1.json  SuaveIV-nu_plugin_audio-0.2.8.json  SuaveIV-nu_script_wttr-0.1.0-main.json  Trivernis-nu-plugin-dialog-0.1.0.json  alex-kattathra-johnson-nu_plugin_ws-1.0.6.json  amtoine-nu-git-manager-0.8.0.json  amtoine-nu-git-manager-sugar-0.7.0.json  b4nst-nu_plugin_format_pcap-0.1.0.json  cptpiepmatz-nu_plugin_highlight-1.4.15.json  dead10ck-nu_plugin_dns-4.0.10.json  fdncred-nu_plugin_file-0.25.2.json  fdncred-nu_plugin_regex-0.22.0.json  idanarye-nu_plugin_skim-0.29.1.json  nushell-custom-completions-0.1.0-f04cb44.json  nushell-git-completions-0.1.0-f04cb44.json  (+6 more)
tools/numan-parser-check/: Cargo.toml
tools/numan-parser-check/src/: main.rs
(+18 files in other folders)
