[package]
name = "numan-registry-parser-check"
version = "0.1.0"
edition = "2021"
rust-version = "1.88"
publish = false

[dependencies]
# Keep this revision explicit: registry CI must parse candidates with the
# production parser that Numan ships, rather than a look-alike schema.
numan-cli = { git = "https://github.com/tonythethompson/numan.git", rev = "6e93c27307a5a256fa6e6dcab602edf1707ed7d1" }
